--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -4642,12 +4642,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "eABu7F0CpoZn",
-        "outputId": "9ecacd62-ea79-4b22-ee71-cffd308f710e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
-        }
+        },
+        "id": "eABu7F0CpoZn",
+        "outputId": "9ecacd62-ea79-4b22-ee71-cffd308f710e"
       },
       "execution_count": 154,
       "outputs": [
@@ -4686,32 +4686,117 @@
     {
       "cell_type": "code",
       "source": [
-        "X_train.head()"
+        "#New Random Forest Model\n",
+        "pipe = make_pipeline(\n",
+        "    TargetEncoder(), \n",
+        "    # OrdinalEncoder(), \n",
+        "    SimpleImputer(), \n",
+        "    RandomForestRegressor(random_state=None)\n",
+        ")\n",
+        "\n",
+        "dists = {\n",
+        "    'targetencoder__smoothing': [2.,20.,50.,60.,100.,500.,1000.], # int로 넣으면 error(bug)\n",
+        "    'targetencoder__min_samples_leaf': randint(1, 10),     \n",
+        "    'simpleimputer__strategy': ['mean', 'median'], \n",
+        "    'randomforestregressor__n_estimators': randint(50, 500), \n",
+        "    'randomforestregressor__max_depth': [5, 10, 15, 20, None], \n",
+        "    'randomforestregressor__max_features': uniform(0, 1) # max_features\n",
+        "}\n",
+        "\n",
+        "clf = RandomizedSearchCV(\n",
+        "    pipe, \n",
+        "    param_distributions=dists, \n",
+        "    n_iter=20, \n",
+        "    cv=3, \n",
+        "    scoring='neg_mean_absolute_error',  \n",
+        "    verbose=1,\n",
+        "    n_jobs=-1\n",
+        ")\n",
+        "\n",
+        "clf.fit(X_train, y_train);"
       ],
       "metadata": {
-        "id": "hl3m2FLEqrQO",
-        "outputId": "e6c64834-4908-40c2-e13b-5375703118fd",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 206
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hl3m2FLEqrQO",
+        "outputId": "7802af05-dcba-4e5d-d019-4e3b8a82cece"
       },
-      "execution_count": 164,
+      "execution_count": 165,
       "outputs": [
         {
-          "output_type": "execute_result",
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 3 folds for each of 20 candidates, totalling 60 fits\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('최적 하이퍼파라미터: ', clf.best_params_)\n",
+        "print('MAE: ', -clf.best_score_)"
+      ],
+      "metadata": {
+        "id": "hQxHjg1-rlO9",
+        "outputId": "6c267042-2eac-42c0-bcca-2c9b5e8721fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 166,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "최적 하이퍼파라미터:  {'randomforestregressor__max_depth': 15, 'randomforestregressor__max_features': 0.47337656999354705, 'randomforestregressor__n_estimators': 382, 'simpleimputer__strategy': 'mean', 'targetencoder__min_samples_leaf': 1, 'targetencoder__smoothing': 500.0}\n",
+            "MAE:  1443.3911746794427\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 만들어진 모델에서 가장 성능이 좋은 모델을 불러옵니다.\n",
+        "pipe = clf.best_estimator_\n",
+        "\n",
+        "from sklearn.metrics import mean_absolute_error\n",
+        "\n",
+        "y_pred_val_rf = pipe.predict(X_val)\n",
+        "mse = mean_squared_error(y_val, y_pred_val_rf)\n",
+        "mae = mean_absolute_error(y_val, y_pred_val_rf)\n",
+        "rmse = mse ** 0.5\n",
+        "r2 = r2_score(y_val, y_pred_val_rf)\n",
+        "\n",
+        "display(pd.DataFrame([['MSE', mse],['MAE', mae],['RMSE', rmse],['R2', r2]], columns=['Metric', 'Score']))"
+      ],
+      "metadata": {
+        "id": "64nK_Tk-rkH1",
+        "outputId": "5df5e054-42e1-4b73-d918-48225bc76500",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 175
+        }
+      },
+      "execution_count": 167,
+      "outputs": [
+        {
+          "output_type": "display_data",
           "data": {
             "text/plain": [
-              "         model  year transmission  mileage  mpg  engineSize\n",
-              "6978     Scala  2020    Semi-Auto      250 47.1         1.0\n",
-              "6666    Citigo  2013    Automatic    87000 64.2         1.0\n",
-              "5966   S Class  2019    Semi-Auto    11876 52.3         3.0\n",
-              "3754     Focus  2017    Automatic    45709 46.3         1.5\n",
-              "5248    Tucson  2017       Manual    20274 61.7         1.7"
+              "  Metric     Score\n",
+              "0    MSE 5147007.7\n",
+              "1    MAE    1409.9\n",
+              "2   RMSE    2268.7\n",
+              "3     R2       0.9"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0b36bcbb-82c6-4a58-83f6-448d32211e14\">\n",
+              "  <div id=\"df-482c81c6-a05c-4ad2-8f7e-1858a95bd1b7\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -4731,64 +4816,35 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>model</th>\n",
-              "      <th>year</th>\n",
-              "      <th>transmission</th>\n",
-              "      <th>mileage</th>\n",
-              "      <th>mpg</th>\n",
-              "      <th>engineSize</th>\n",
+              "      <th>Metric</th>\n",
+              "      <th>Score</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>6978</th>\n",
-              "      <td>Scala</td>\n",
-              "      <td>2020</td>\n",
-              "      <td>Semi-Auto</td>\n",
-              "      <td>250</td>\n",
-              "      <td>47.1</td>\n",
-              "      <td>1.0</td>\n",
+              "      <th>0</th>\n",
+              "      <td>MSE</td>\n",
+              "      <td>5147007.7</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>6666</th>\n",
-              "      <td>Citigo</td>\n",
-              "      <td>2013</td>\n",
-              "      <td>Automatic</td>\n",
-              "      <td>87000</td>\n",
-              "      <td>64.2</td>\n",
-              "      <td>1.0</td>\n",
+              "      <th>1</th>\n",
+              "      <td>MAE</td>\n",
+              "      <td>1409.9</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>5966</th>\n",
-              "      <td>S Class</td>\n",
-              "      <td>2019</td>\n",
-              "      <td>Semi-Auto</td>\n",
-              "      <td>11876</td>\n",
-              "      <td>52.3</td>\n",
-              "      <td>3.0</td>\n",
+              "      <th>2</th>\n",
+              "      <td>RMSE</td>\n",
+              "      <td>2268.7</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3754</th>\n",
-              "      <td>Focus</td>\n",
-              "      <td>2017</td>\n",
-              "      <td>Automatic</td>\n",
-              "      <td>45709</td>\n",
-              "      <td>46.3</td>\n",
-              "      <td>1.5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5248</th>\n",
-              "      <td>Tucson</td>\n",
-              "      <td>2017</td>\n",
-              "      <td>Manual</td>\n",
-              "      <td>20274</td>\n",
-              "      <td>61.7</td>\n",
-              "      <td>1.7</td>\n",
+              "      <th>3</th>\n",
+              "      <td>R2</td>\n",
+              "      <td>0.9</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0b36bcbb-82c6-4a58-83f6-448d32211e14')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-482c81c6-a05c-4ad2-8f7e-1858a95bd1b7')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -4839,12 +4895,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0b36bcbb-82c6-4a58-83f6-448d32211e14 button.colab-df-convert');\n",
+              "          document.querySelector('#df-482c81c6-a05c-4ad2-8f7e-1858a95bd1b7 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0b36bcbb-82c6-4a58-83f6-448d32211e14');\n",
+              "          const element = document.querySelector('#df-482c81c6-a05c-4ad2-8f7e-1858a95bd1b7');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -4866,8 +4922,7 @@
               "  "
             ]
           },
-          "metadata": {},
-          "execution_count": 164
+          "metadata": {}
         }
       ]
     },
@@ -4891,10 +4946,175 @@
         "df_table.head()"
       ],
       "metadata": {
-        "id": "RL2MJzAFV4ru"
+        "id": "RL2MJzAFV4ru",
+        "outputId": "b7a7fbb1-a9c4-42ab-ad68-8c95bbde8912",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 168,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "      y_value  y_pred    Diff  (%)\n",
+              "9241    13295 13110.5   184.5  1.4\n",
+              "6956    16295 20137.3 -3842.3 23.6\n",
+              "8707     8295 11960.7 -3665.7 44.2\n",
+              "5906    18340 18457.3  -117.3  0.6\n",
+              "4177    13500 13017.2   482.8  3.6"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-886f683f-05fa-4e7b-9bbd-bdccd02e7128\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>y_value</th>\n",
+              "      <th>y_pred</th>\n",
+              "      <th>Diff</th>\n",
+              "      <th>(%)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>9241</th>\n",
+              "      <td>13295</td>\n",
+              "      <td>13110.5</td>\n",
+              "      <td>184.5</td>\n",
+              "      <td>1.4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6956</th>\n",
+              "      <td>16295</td>\n",
+              "      <td>20137.3</td>\n",
+              "      <td>-3842.3</td>\n",
+              "      <td>23.6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8707</th>\n",
+              "      <td>8295</td>\n",
+              "      <td>11960.7</td>\n",
+              "      <td>-3665.7</td>\n",
+              "      <td>44.2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5906</th>\n",
+              "      <td>18340</td>\n",
+              "      <td>18457.3</td>\n",
+              "      <td>-117.3</td>\n",
+              "      <td>0.6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4177</th>\n",
+              "      <td>13500</td>\n",
+              "      <td>13017.2</td>\n",
+              "      <td>482.8</td>\n",
+              "      <td>3.6</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-886f683f-05fa-4e7b-9bbd-bdccd02e7128')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-886f683f-05fa-4e7b-9bbd-bdccd02e7128 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-886f683f-05fa-4e7b-9bbd-bdccd02e7128');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 168
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -4902,10 +5122,33 @@
         "df_table[\"(%)\"].describe()"
       ],
       "metadata": {
-        "id": "94Nlu1hsWyJU"
+        "id": "94Nlu1hsWyJU",
+        "outputId": "886e291b-fba7-47a3-9a71-aa7c4856c19a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 169,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "count   2554.0\n",
+              "mean       8.8\n",
+              "std       10.5\n",
+              "min        0.0\n",
+              "25%        3.1\n",
+              "50%        6.4\n",
+              "75%       11.4\n",
+              "max      243.6\n",
+              "Name: (%), dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 169
+        }
+      ]
     }
   ]
 }
