--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -1973,7 +1973,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 471
         },
         "id": "MvOv75APTvfK",
         "outputId": "59c6fd79-fdb8-461a-d0f9-df1a87187991"
@@ -2005,7 +2005,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 442
         },
         "id": "uOL0iA_Idjjm",
         "outputId": "d69d164a-138a-489e-a46f-ae070da4d04b"
@@ -2064,7 +2064,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 192
         },
         "id": "iJPIV4YvkawQ",
         "outputId": "987a4579-87d9-4570-861b-2b2ed37ba3f4"
@@ -2242,7 +2242,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 495
         },
         "id": "-fsZ7ZUKWmpx",
         "outputId": "eebc2c91-ac08-4d66-86e0-79fef8e72b35"
@@ -2276,7 +2276,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 143
         },
         "id": "Lw1ge908hDFI",
         "outputId": "c5776248-e57f-4007-d695-9812ffa1393c"
@@ -2529,7 +2529,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 143
         },
         "id": "v7UM8uWgkaJx",
         "outputId": "b5e6d36c-8e07-461c-d741-6865aac7cdd6"
@@ -2744,7 +2744,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 1000
         },
         "id": "7_mpIyOMlK7Y",
         "outputId": "9bdb4fdf-3892-4c9c-88ec-0e023cbc4b2b"
@@ -2843,7 +2843,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 192
         },
         "id": "4tpCN4rhsuw_",
         "outputId": "dedf066e-19d8-4c6e-a2b3-b2611e06872f"
@@ -4941,8 +4941,17 @@
       "source": [
         "#Test the baseline model\n",
         "\n",
-        "price_mean = y_train.mean()\n",
-        "y_pred_test_baseline = [price_mean] * len(y_test)\n",
+        "# ordinal encoder\n",
+        "ord_enc = OrdinalEncoder(handle_missing=\"value\")\n",
+        "ord_enc.fit_transform(X_train)\n",
+        "X_test_ord_enc = ord_enc.transform(X_test)\n",
+        "\n",
+        "# Select features\n",
+        "features = ['engineSize', 'transmission', 'year']\n",
+        "X_test_baseline = X_test_ord_enc[features]\n",
+        "\n",
+        "# test set\n",
+        "y_pred_test_baseline = multiple_linear_model.predict(X_test_baseline)\n",
         "\n",
         "mse = mean_squared_error(y_test, y_pred_test_baseline)\n",
         "mae = mean_absolute_error(y_test, y_pred_test_baseline)\n",
@@ -4952,28 +4961,28 @@
         "display(pd.DataFrame([['MSE', mse],['MAE', mae],['RMSE', rmse],['R2', r2]], columns=['Metric', 'Score']))"
       ],
       "metadata": {
-        "id": "NBWv8GO0ua_r",
-        "outputId": "e6e692c5-6e7f-4f56-f6c6-1c715d8fcf6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        }
+        },
+        "id": "NBWv8GO0ua_r",
+        "outputId": "34f89788-1e6d-4cfe-f684-5068cfbb891f"
       },
-      "execution_count": 178,
+      "execution_count": 184,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
               "  Metric      Score\n",
-              "0    MSE 72602174.2\n",
-              "1    MAE     6606.0\n",
-              "2   RMSE     8520.7\n",
-              "3     R2       -0.0"
+              "0    MSE 19905084.1\n",
+              "1    MAE     3328.7\n",
+              "2   RMSE     4461.5\n",
+              "3     R2        0.7"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-21f187a7-1793-48fc-a434-51d477585bfa\">\n",
+              "  <div id=\"df-1601e65e-563a-46de-888c-066db81ff784\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -5001,27 +5010,27 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>MSE</td>\n",
-              "      <td>72602174.2</td>\n",
+              "      <td>19905084.1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>MAE</td>\n",
-              "      <td>6606.0</td>\n",
+              "      <td>3328.7</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>RMSE</td>\n",
-              "      <td>8520.7</td>\n",
+              "      <td>4461.5</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>R2</td>\n",
-              "      <td>-0.0</td>\n",
+              "      <td>0.7</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-21f187a7-1793-48fc-a434-51d477585bfa')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1601e65e-563a-46de-888c-066db81ff784')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -5072,12 +5081,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-21f187a7-1793-48fc-a434-51d477585bfa button.colab-df-convert');\n",
+              "          document.querySelector('#df-1601e65e-563a-46de-888c-066db81ff784 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-21f187a7-1793-48fc-a434-51d477585bfa');\n",
+              "          const element = document.querySelector('#df-1601e65e-563a-46de-888c-066db81ff784');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -5117,14 +5126,14 @@
         "display(pd.DataFrame([['MSE', mse],['MAE', mae],['RMSE', rmse],['R2', r2]], columns=['Metric', 'Score']))"
       ],
       "metadata": {
-        "id": "hIfQ2rUJuKUX",
-        "outputId": "ac22971f-4e94-42f5-8c8b-0db83b302ae6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        }
+        },
+        "id": "hIfQ2rUJuKUX",
+        "outputId": "9be394fc-9b75-43d0-9b3f-e1af2de11e7e"
       },
-      "execution_count": 177,
+      "execution_count": 180,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5138,7 +5147,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-354a6184-6063-4e51-a5df-27b0b8344d46\">\n",
+              "  <div id=\"df-35db4822-81a0-4f03-ba78-16dd36d4af49\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -5186,7 +5195,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-354a6184-6063-4e51-a5df-27b0b8344d46')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-35db4822-81a0-4f03-ba78-16dd36d4af49')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -5237,12 +5246,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-354a6184-6063-4e51-a5df-27b0b8344d46 button.colab-df-convert');\n",
+              "          document.querySelector('#df-35db4822-81a0-4f03-ba78-16dd36d4af49 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-354a6184-6063-4e51-a5df-27b0b8344d46');\n",
+              "          const element = document.querySelector('#df-35db4822-81a0-4f03-ba78-16dd36d4af49');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -5271,18 +5280,177 @@
     {
       "cell_type": "code",
       "source": [
-        "df_table = pd.DataFrame({\"y_test\":y_val,\"y_pred\":y_pred_val_rf})\n",
+        "df_table = pd.DataFrame({\"y_test\":y_test,\"baseline_model\":y_pred_test_baseline, \"best_model\":y_pred_test_best})\n",
         "\n",
-        "df_table[\"Diff\"] = df_table[\"y_value\"] - df_table[\"y_pred\"]\n",
-        "df_table[\"(%)\"] = abs(df_table[\"Diff\"]/df_table[\"y_value\"])*100\n",
+        "# df_table[\"Diff\"] = df_table[\"y_value\"] - df_table[\"y_pred\"]\n",
+        "# df_table[\"(%)\"] = abs(df_table[\"Diff\"]/df_table[\"y_value\"])*100\n",
         "\n",
         "df_table.head()"
       ],
       "metadata": {
-        "id": "cM-ipMJbu1Gj"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "id": "cM-ipMJbu1Gj",
+        "outputId": "3fdaad91-8346-4f24-869e-e7458ae7804c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 182,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "      y_test  baseline_model  best_model\n",
+              "2701   12495         16718.1     10074.5\n",
+              "5722   26499         16718.1     26330.8\n",
+              "8976   11698         16718.1     16687.0\n",
+              "9395   54994         16718.1     46254.4\n",
+              "7425    6998         16718.1      8793.4"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-9d3cc3d1-fa54-4a65-aff8-9170a6938b1e\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>y_test</th>\n",
+              "      <th>baseline_model</th>\n",
+              "      <th>best_model</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2701</th>\n",
+              "      <td>12495</td>\n",
+              "      <td>16718.1</td>\n",
+              "      <td>10074.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5722</th>\n",
+              "      <td>26499</td>\n",
+              "      <td>16718.1</td>\n",
+              "      <td>26330.8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8976</th>\n",
+              "      <td>11698</td>\n",
+              "      <td>16718.1</td>\n",
+              "      <td>16687.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9395</th>\n",
+              "      <td>54994</td>\n",
+              "      <td>16718.1</td>\n",
+              "      <td>46254.4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7425</th>\n",
+              "      <td>6998</td>\n",
+              "      <td>16718.1</td>\n",
+              "      <td>8793.4</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9d3cc3d1-fa54-4a65-aff8-9170a6938b1e')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-9d3cc3d1-fa54-4a65-aff8-9170a6938b1e button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-9d3cc3d1-fa54-4a65-aff8-9170a6938b1e');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 182
+        }
+      ]
     },
     {
       "cell_type": "code",
